--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,19 +15,52 @@
 <resources>
     <!-- Title for the application. [CHAR LIMIT=12] -->
     <string name="app_name">Miwok</string>
-
     <!-- Category name for phrases [CHAR LIMIT=20] -->
     <string name="category_phrases">Phrases</string>
-
     <!-- Category name for the vocabulary words for colors [CHAR LIMIT=20] -->
     <string name="category_colors">Colors</string>
-
     <!-- Category name for the vocabulary words for numbers [CHAR LIMIT=20] -->
     <string name="category_numbers">Numbers</string>
-
     <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
     <string name="category_family">Family Members</string>
-    <string name="collors">Collors</string>
     <string name="sound">Sound</string>
     <string name="play">Play</string>
+    <string name="where_are_you_going">Where are you going?</string>
+    <string name="what_is_your_name">What is your name?</string>
+    <string name="my_name_is">My name is...</string>
+    <string name="how_are_you_feeling">How are you feeling?</string>
+    <string name="i_m_feeling_good">I’m feeling good.</string>
+    <string name="are_you_coming">Are you coming?</string>
+    <string name="yes_i_m_coming">Yes, I’m coming.</string>
+    <string name="i_m_coming">I’m coming.</string>
+    <string name="let_s_go">Let’s go.</string>
+    <string name="come_here">Come here.</string>
+    <string name="red">Red</string>
+    <string name="green">Green</string>
+    <string name="brown">Brown</string>
+    <string name="gray">Gray</string>
+    <string name="black">Black</string>
+    <string name="white">White</string>
+    <string name="dusty_yellow">Dusty Yellow</string>
+    <string name="mustard_yellow">mustard Yellow</string>
+    <string name="father">Father</string>
+    <string name="mother">Mother</string>
+    <string name="son">Son</string>
+    <string name="daughter">Daughter</string>
+    <string name="older_brother">Older Brother</string>
+    <string name="younger_brother">Younger Brother</string>
+    <string name="older_sister">Older Sister</string>
+    <string name="younger_sister">Younger Sister</string>
+    <string name="grandmother">Grandmother</string>
+    <string name="grandfather">Grand Father</string>
+    <string name="one">One</string>
+    <string name="two">Two</string>
+    <string name="three">Three</string>
+    <string name="four">Four</string>
+    <string name="five">Five</string>
+    <string name="six">Six</string>
+    <string name="seven">Seven</string>
+    <string name="eight">Eight</string>
+    <string name="nine">Nine</string>
+    <string name="ten">Ten</string>
 </resources>
