--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -23,7 +23,7 @@
     <string name="green">Verde</string>
     <string name="gray">Cinza</string>
     <string name="white">Branco</string>
-    <string name="dusty_yellow">Dusty Yellow</string>
+    <string name="dusty_yellow">Amarelo Areia</string>
     <string name="mustard_yellow">Amarelo Mustarda</string>
     <string name="father">Pai</string>
     <string name="mother">Mãe</string>
